<resources>
    <string name="app_name">Locubip</string>
    <string name="titulo_principal">Principal</string>
    <string name="titulo_ubicacion">Ubicación</string>
    <string name="titulo_historial">Historial</string>
    <string name="titulo_perfil">Perfil</string>
    <string name="titulo_evento">Evento</string>

    <string name="permission_granted">Permiso Concedido</string>
    <string name="permission_rejected">Debes aceptar los permisos para continuar</string>


    <string name="title_activity_login">login</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_historial_mapa">Map</string>


    <string name="notif_title">¿Te encentras bien?</string>
    <string name="notif_body">Haz click</string>
    <string name="notif_body_intent">Hey! ¿todo en orden?</string>
    <string name="title_activity_ubicacion">Map</string>


    <string name="titlulo_pickers">Obtener fecha y hora</string>
    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>


    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>

    <string name="title_activity_lista_eventos">listaEventos</string>
    <string name="title_activity_uaprincipal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nombre del grupo</string>
    <string name="nav_header_subtitle">Número de miembros</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="nav_group_example">Grupo 1</string>
    <string name="nav_opciones">Opciones</string>
    <string name="nav_config">Configuración</string>
    <string name="nav_help">Ayuda</string>
    <string name="nav_premium">Premium</string>


    <!-- TODO: Strings para pantalla de configuraciones -->

    <string name="titulo_perfil_settings">Perfil</string>

    <string name="titulo_modi_contra">Modificar contraseña</string>
    <string name="key_modi_contra">key_modi_contra</string>
    <string name="default_contrasena">**********</string>

    <string name="titulo_modi_user">Modificar nombre de usuario</string>
    <string name="key_modi_user">key_modi_user</string>
    <string name="default_user">user12345</string>

    <string name="titulo_add_mail">Añadir cuenta de correo electónico</string>
    <string name="key_add_mail">key_add_mail</string>
    <string name="default_mail">usuario_admin@gmail.com</string>

    <string name="titulo_show_position">Mostrar mi ubicación</string>
    <string name="key_position">key_position</string>

    <string name="titulo_delete_cuenta">Eliminar cuenta</string>
    <string name="key_cuenta_deleted">key_cuenta_deleted</string>


    <string name="titulo_cajanegra_settings">Caja Negra</string>
    <string name="titulo_pago_settings">Pagos</string>
    <string name="titulo_mapa_settings">Mapa</string>
    <string name="titulo_alertas_settings">Alertas</string>


    <string name="TITULO_PROVISIONAL">Configuración ###</string>

    <string name="About">Sobre nosotros</string>
    <string name="summary_about">Locubip es una app aun en desarrollo.</string>


    <string name="title_activity_settings">Configuraciones</string>


    <string-array name="pref_upload_quality_entries">
        <item>360p</item>
        <item>480p</item>
        <item>720p</item>
        <item>1080p</item>
        <item>Original</item>
    </string-array>
    <string-array name="pref_upload_quality_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>


    <!-- TODO: Strings para opciones de acciones en grupo -->

    <string name="agrega_miembro">Agrega usuario</string>
    <string name="ver_um">Ver usuarios del grupo</string>
    <string name="ver_preguntas">Preguntas para alertas</string>
    <string name="agrega_evento">Agrega evento</string>
    <string name="agrega_rutina">Asigna rutina</string>
    <string name="elimina_grupo">Eliminar grupo</string>
    <string name="salir_cuenta">Salir de la cuenta</string>

    <!-- TODO: Strings para opciones de usuarios monitoreados -->

    <string name="ver_en_mapa">Ver usuario en mapa</string>
    <string name="ver_historial_rutas">Historial de rutas</string>
    <string name="ver_historial_alertas">Historial de alertas</string>
    <string name="ver_historial_caja">Historial de caja negra</string>

    <!-- TODO: Strings registro, parte 1 -->

    <string name="r_correo">Correo electrónico</string>
    <string name="r_contra">Contraseña</string>
    <string name="r_confirm_contra">Confirma contraseña</string>
    <string name="r_telefono">Número de teléfono</string>
    <string name="r_next">Continuar</string>

    <!-- TODO: Strings registro, parte 2 -->

    <string name="r_um">Usuario monitoreado</string>
    <string name="r_ua">Usuario administrador</string>

    <!-- TODO: Strings registro, parte 3 -->

    <string name="r_cuenta_prueba">Prueba de 7 días</string>
    <string name="r_cuenta_completa">Versión completa</string>

    <!-- TODO: Strings registro, parte 4 -->

    <string name="r_nombre">Nombre</string>
    <string name="r_fecha_nacimiento">Fecha de nac.</string>
    <string name="r_foto">Agrega una fotografía</string>
    <string name="r_pickDate">Date</string>
    <string name="title_activity_config">Configuraciones</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
